--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,9 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true, "parser": "flow" }],
+    "prettier/prettier": "error",
+    "@typescript-eslint/camelcase": "off",
+    "class-methods-use-this": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
