--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/multer": "^1.4.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "typeform": "^1.0.1",
@@ -18,6 +23,7 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
