--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
     "class-methods-use-this": "off",
     "import/extensions": [
       "error",
