--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "no-useless-constructor": "off",
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-unused-vars": [
@@ -29,6 +30,10 @@
       }
     ],
     "class-methods-use-this": "off",
+    "@typescript-eslint/interface-name-prefix": [
+      "error",
+      { "prefixWithI": "always" }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
