--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "ts-node src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/cors": "^2.8.6",
@@ -21,6 +22,7 @@
     "multer": "^1.4.2",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.1.0",
     "typeform": "^1.0.1",
     "typeorm": "^0.2.24",
     "uuidv4": "^6.0.7"
@@ -36,8 +38,10 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
     "prettier": "^2.0.4",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   }
 }
