--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.1.0",
@@ -32,6 +34,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "5.16.0",
