--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/multer": "^1.4.2",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
@@ -33,7 +36,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.0",
     "@types/jest": "^25.2.1",
+    "@types/mongodb": "^3.5.17",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
