adding middleware rate limiter flexible node

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/multer": "^1.4.2",
+    "@types/redis": "^2.8.21",
     "aws-sdk": "^2.678.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
@@ -31,6 +32,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
+    "rate-limiter-flexible": "^2.1.4",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.1.0",
     "typeform": "^1.0.1",
