--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: docker
-    container_name: gostack_postgres
+    container_name: gostack_gobarber
   mongodb:
     image: mongo
     ports:
