--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - 5432:5432
     environment:
+      POSTGRES_DB: gostack_gobarber
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
     container_name: gostack_gobarber
   mongodb:
