--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,16 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "outDir": ".dist",
+    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
     "baseUrl": "./src",
     "allowJs": true,
     "paths": {
-      "@modules*": ["modules*"],
-      "@config*": ["config*"],
-      "@shared*": ["shared*"]
+      "@modules/*": ["modules/*"],
+      "@config/*": ["config/*"],
+      "@shared/*": ["shared/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
